--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "add": "^2.0.6",
     "cordova": "^9.0.0",
     "cordova-plugin-camera": "^4.1.0",
@@ -41,7 +42,7 @@
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
     "@angular/compiler": "~8.1.2",
-    "@angular/compiler-cli": "~8.1.2",
+    "@angular/compiler-cli": "^8.1.3",
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
